padding: px -> rem, pt. 2

--- a/src/pug/base/filter-tires.pug
+++ b/src/pug/base/filter-tires.pug
@@ -6,7 +6,7 @@
           svg.form__title-icon.mr-2
             use(xlink:href="#icon-tires")
           | Подбор шин
-        button.btn-link(type="reset") Сбросить
+        button.btn-unstyled.h6(type="reset") Сбросить
       .form__section
         .form__section-title.h6.color-disabled.mb-4 Типоразмер
         .row
@@ -42,7 +42,7 @@
                 option 12C
                 option 13
                 option 13C
-        button.form__section-toggler.btn-link.mt-lg-4(type="button") Добавить размер для спарки
+        button.form__section-toggler.btn-unstyled.h6.mt-lg-4(type="button") Добавить размер для спарки
       .form__section.form__section_hidden
         .form__section-title.h6.color-disabled.mb-4 Типоразмер (задняя ось)
         .row
@@ -187,7 +187,7 @@
                   use(xlink:href="#icon-checked")
               span.form__label-title Bridgestone
       .text-center
-        button.btn-unstyled(type="submit")
+        button.btn-unstyled.h6(type="submit")
           span.readmore.readmore_arrow-down Показать еще
     .filter__alert(style="bottom:0;")
       .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
