--- a/src/pug/base/filter-wheels.pug
+++ b/src/pug/base/filter-wheels.pug
@@ -6,7 +6,7 @@
           svg.form__title-icon.mr-2
             use(xlink:href="#icon-wheels")
           | Подбор дисков
-        button.btn-link(type="reset") Сбросить
+        button.btn-unstyled.h6(type="reset") Сбросить
       .form__section
         .form__section-title.h6.color-disabled.mb-4 Типоразмер
         .row
@@ -184,7 +184,7 @@
                   use(xlink:href="#icon-checked")
               span.form__label-title Bridgestone
       .text-center
-        button.btn-unstyled(type="submit")
+        button.btn-unstyled.h6(type="submit")
           span.readmore.readmore_arrow-down Показать еще
     .filter__alert
       .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
