--- a/src/pug/carousel/comparing-noparamtitle.pug
+++ b/src/pug/carousel/comparing-noparamtitle.pug
@@ -1,4 +1,4 @@
-.card.card_column.card_slide
+.card.card_sm.card_slide
   .card__header
     a.card__picture(href="#")
       img.img-fluid(src="../img/content/cards/card-1.jpg" alt="" title="")
