--- a/src/pug/category/carousel.pug
+++ b/src/pug/category/carousel.pug
@@ -5,4 +5,4 @@
   .swiper-wrapper.align-items-stretch
     each recommended__item in recommended
       .swiper-slide
-        +card(recommended__item.price__old,recommended__item.price__new,recommended__item.title,recommended__item.label,recommended__item.warranty,recommended__item.credit,recommended__item.card,recommended__item.delivery,recommended__item.repair,recommended__item.winter,recommended__item.spikes)
+        +card(recommended__item.price__old,recommended__item.price__new,recommended__item.title,recommended__item.label,recommended__item.warranty,recommended__item.credit,recommended__item.card,recommended__item.delivery,recommended__item.repair,recommended__item.winter,recommended__item.spikes,false,'card_slide d-flex')
