--- a/src/pug/category/popular.pug
+++ b/src/pug/category/popular.pug
@@ -12,24 +12,24 @@
       +slidesNav
       .swiper-wrapper
         .swiper-slide
-          +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_column')
+          +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_sm d-flex')
         .swiper-slide
-          +card('12 337.12','','Зимние шины Yokohama Ice Guard IG55','',false,false,false,false,false,true,true,true,'card_column')
+          +card('12 337.12','','Зимние шины Yokohama Ice Guard IG55','',false,false,false,false,false,true,true,true,'card_sm d-flex')
         .swiper-slide
           +banner('content/banners/banner-3.jpg')
         .swiper-slide
-          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','sale',false,false,true,false,false,false,false,true,'card_column')
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','sale',false,false,true,false,false,false,false,true,'card_sm d-flex')
         .swiper-slide
           +banner('content/banners/banner-4.jpg')
         .swiper-slide
-          +card('12 337.12','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','discount',true,true,false,false,false,false,false,true,'card_column')
+          +card('12 337.12','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','discount',true,true,false,false,false,false,false,true,'card_sm d-flex')
         .swiper-slide
-          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55','hit',false,false,false,true,true,false,false,true,'card_column')
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55','hit',false,false,false,true,true,false,false,true,'card_sm d-flex')
         .swiper-slide
-          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','sale',false,false,false,false,true,false,false,true,'card_column')
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL','sale',false,false,false,false,true,false,false,true,'card_sm d-flex')
         .swiper-slide
-          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17','sale',false,false,false,true,false,false,false,true,'card_column')
+          +card('','','Зимние шины Yokohama Ice Guard IG55 215/55 R17','sale',false,false,false,true,false,false,false,true,'card_sm d-flex')
         .swiper-slide
-          +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_column')
+          +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_sm d-flex')
         .swiper-slide
-          +card('','14 000','Шины Yokohama Ice Guard IG55 215/55 R17 98T','',false,false,false,false,false,false,false,true,'card_column')
+          +card('','14 000','Шины Yokohama Ice Guard IG55 215/55 R17 98T','',false,false,false,false,false,false,false,true,'card_sm d-flex')
