--- a/src/pug/comparing.pug
+++ b/src/pug/comparing.pug
@@ -24,7 +24,7 @@ block wrapper
                 use(xlink:href="#icon-checked")
             span.form__label-title Показать только различия
         .col-xl-2.col-lg-3.col-md-4.col-3.d-flex.justify-content-end.mb-4
-          button.btn.text-uppercase.btn_icon.btn_nobg(type="button")
+          button.btn.btn_nobg.h5.p-0(type="button")
             svg.btn__icon.color-brand.mr-md-2
               use(xlink:href="#icon-trash")
             span.d-md-block.d-none Очистить список
@@ -43,7 +43,7 @@ block wrapper
                 use(xlink:href="#icon-checked")
             span.form__label-title Показать только различия
         .col-xl-2.col-lg-3.col-md-4.col-3.d-flex.justify-content-end.mb-4
-          button.btn.text-uppercase.btn_icon.btn_nobg(type="button")
+          button.btn.btn_nobg.h5.p-0(type="button")
             svg.btn__icon.color-brand.mr-md-2
               use(xlink:href="#icon-trash")
             span.d-md-block.d-none Очистить список
