--- a/src/pug/results-wheels.pug
+++ b/src/pug/results-wheels.pug
@@ -12,17 +12,17 @@ block results__sidebar
 
 block results__wrapper
   .category.mb-3
-    +card('','','Диск КиК Сильверстоун (КС770-02)','sale',false,false,true,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +card('15 000','','Диск КиК Сильверстоун','discount',true,true,false,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +banner('content/banners/banner-7.jpg', false, 'card_column card_banner card_tile')
-    +card('','','Диск Сильверстоун (КС770-02)','hit',false,false,false,true,true,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +card('','','Диск КиК','',false,false,false,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +banner('content/banners/banner-8.jpg', false, 'card_column card_banner card_tile')
-    +card('','','Диск КС770-02','sale',false,false,false,false,true,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +card('','','Диск Сильверстоун','',false,false,false,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +card('15 000','','Диск КиК Сильверстоун','discount',true,false,false,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +card('','','Диск КиК Сильверстоун (КС770-02)','hit',false,true,false,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
-    +card('','','Диск Сильверстоун','',false,false,false,false,false,false,false,true,'card_column card_tile','content/cards/card-2.jpg')
+    +card('','','Диск КиК Сильверстоун (КС770-02)','sale',false,false,true,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +card('15 000','','Диск КиК Сильверстоун','discount',true,true,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +banner('content/banners/banner-7.jpg', false, 'd-none d-sm-block')
+    +card('','','Диск Сильверстоун (КС770-02)','hit',false,false,false,true,true,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +card('','','Диск КиК','',false,false,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +banner('content/banners/banner-8.jpg', false, 'd-none d-sm-block')
+    +card('','','Диск КС770-02','sale',false,false,false,false,true,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +card('','','Диск Сильверстоун','',false,false,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +card('15 000','','Диск КиК Сильверстоун','discount',true,false,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +card('','','Диск КиК Сильверстоун (КС770-02)','hit',false,true,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
+    +card('','','Диск Сильверстоун','',false,false,false,false,false,false,false,true,'card_tile d-sm-flex','content/cards/card-2.jpg')
 
 block results__seealso
   .section.mb-3
