--- a/src/pug/tile/category.pug
+++ b/src/pug/tile/category.pug
@@ -1,4 +1,4 @@
-.card.card_column.card_tile
+.card.card_sm.card_tile
   .card__header
     a.card__picture.mb-0(href="#")
       img.img-fluid(src="../img/content/cards/card-1.jpg" alt="" title="")
