--- a/src/pug/subcategory-tires-list.pug
+++ b/src/pug/subcategory-tires-list.pug
@@ -5,7 +5,7 @@ block meta
 
 block filter
   .header__footer
-    button.filter-toggler(type="button")
+    button.filter-toggler.d-flex.align-items-center.justify-content-center.bg-light.p-2(type="button")
       svg.filter-toggler__icon.mr-2
         use(xlink:href="#icon-filter")
       span.filter-toggler__title
