--- a/src/scss/tpl/_filter.scss
+++ b/src/scss/tpl/_filter.scss
@@ -36,12 +36,8 @@
 
 .filter-toggler {
   @extend %btn-default;
-  @extend %flex-item;
   @include wh(100%,40px);
-  padding: 8px;
-  justify-content: center;
   color: $color__text_default;
-  background: $color__light;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, .12) inset;
 }
 
@@ -103,10 +99,8 @@
   @include media-breakpoint-up(lg) {
     @include pos(auto,0);
     right: 0;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 4px 16px 16px;
+    padding: .25rem 1rem 1rem;
   }
 
   @include media-breakpoint-down(md) {
@@ -114,6 +108,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 16px 24px;
+    padding: 1rem 1.5rem;
   }
 }
