padding: px -> rem, pt. 3

--- a/src/pug/base/filter-wheels.pug
+++ b/src/pug/base/filter-wheels.pug
@@ -186,7 +186,7 @@
       .text-center
         button.btn-unstyled.h6(type="submit")
           span.readmore.readmore_arrow-down Показать еще
-    .filter__alert
+    .filter__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-white.bg-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
       .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
