--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -8,17 +8,17 @@ block wrapper
         .tabs.mb-5
             ul.tabs__nav.nav.nav-tabs(role="tablist")
                 li.tabs__nav-item.flex-grow-1.nav-item
-                    a.tabs__nav-link.tabs__nav-link_notitle.nav-link.active(href="#filter-tires" data-toggle="tab" role="tab" aria-controls="filter-tires" aria-selected="true")
+                    a.tabs__nav-link.p-2.tabs__nav-link_notitle.nav-link.active(href="#filter-tires" data-toggle="tab" role="tab" aria-controls="filter-tires" aria-selected="true")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-tires")
                         span.tabs__nav-title Подбор шин
                 li.tabs__nav-item.flex-grow-1.nav-item
-                    a.tabs__nav-link.tabs__nav-link_notitle.nav-link(href="#filter-wheels" data-toggle="tab" role="tab" aria-controls="filter-wheels" aria-selected="false")
+                    a.tabs__nav-link.p-2.tabs__nav-link_notitle.nav-link(href="#filter-wheels" data-toggle="tab" role="tab" aria-controls="filter-wheels" aria-selected="false")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-wheels")
                         span.tabs__nav-title Подбор дисков
                 li.tabs__nav-item.flex-grow-1.nav-item
-                    a.tabs__nav-link.tabs__nav-link_notitle.nav-link(href="#filter-cars" data-toggle="tab" role="tab" aria-controls="filter-cars" aria-selected="false")
+                    a.tabs__nav-link.p-2.tabs__nav-link_notitle.nav-link(href="#filter-cars" data-toggle="tab" role="tab" aria-controls="filter-cars" aria-selected="false")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-car")
                         span.tabs__nav-title Подбор по авто
@@ -360,11 +360,11 @@ block wrapper
         .tabs.mb-5
             ul.tabs__nav.nav.nav-tabs(role="tablist")
               li.tabs__nav-item.flex-grow-1.nav-item
-                a.tabs__nav-link.nav-link.active(href="#links-tires" data-toggle="tab" role="tab" aria-controls="links-tires" aria-selected="true")
+                a.tabs__nav-link.p-2.nav-link.active(href="#links-tires" data-toggle="tab" role="tab" aria-controls="links-tires" aria-selected="true")
                   +icon('tires','tabs__nav-icon')
                   span.tabs__nav-title.text-uppercase шины
               li.tabs__nav-item.flex-grow-1.nav-item
-                a.tabs__nav-link.nav-link(href="#links-wheels" data-toggle="tab" role="tab" aria-controls="links-wheels" aria-selected="false")
+                a.tabs__nav-link.p-2.nav-link(href="#links-wheels" data-toggle="tab" role="tab" aria-controls="links-wheels" aria-selected="false")
                   +icon('wheels','tabs__nav-icon')
                   span.tabs__nav-title.text-uppercase диски
             .tabs__content.tab-content
