--- a/src/scss/tpl/_banner.scss
+++ b/src/scss/tpl/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   position: relative;
-  border-radius: 8px;
+  border-radius: .5rem;
   box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
 
   @include media-breakpoint-up(lg) {
