--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -202,18 +202,22 @@ html(lang="ru")
 
   .slides_togglers-next в category/popular.pug
   _swiper.scss - перебрать
+  _sales
   _section
   _common
   _card
+  _tabs
+  _form - внутренние отступы и стили текста
 
-    + найти внесённые автозаменой изменения https://github.com/ru39391/ds.src/commit/c9873189729f2f34d535759217546e7950546e30
-
-  padding
-  px
-  py
+    + padding
+    + px
+    + py
+    + @include offset()
 
   service.pug - изменить вёрстку promo
   избавиться от .content__date и прочих похожих
   flex-grow: 1 -> flex-grow-1
+
+    + вернуть фон кнопки фильтра results-tires.pug в стили
 
   contacts.pug - поправить баг с аккордеоном
