--- a/src/pug/filter-oil.pug
+++ b/src/pug/filter-oil.pug
@@ -5,7 +5,7 @@ block meta
 
 block filter
   .header__footer
-    button.filter-toggler.d-flex.align-items-center.justify-content-center.bg-light.p-2(type="button")
+    button.filter-toggler.d-flex.align-items-center.justify-content-center.p-2(type="button")
       svg.filter-toggler__icon.mr-2
         use(xlink:href="#icon-filter")
       span.filter-toggler__title
@@ -170,7 +170,7 @@ block wrapper
                 .text-center
                   button.btn-unstyled.h6(type="submit")
                     span.readmore.readmore_arrow-down Показать еще
-              .filter__alert
+              .filter__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-white.bg-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
                 .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
                   .h5.font-weight-normal.mr-2 Найдено:
                   | 713
