--- a/src/pug/libs/mixins.pug
+++ b/src/pug/libs/mixins.pug
@@ -56,11 +56,11 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
         +img(card__img)
       .card__meta.card__meta_left
         if (card__label === 'discount')
-          .card__label.card__label_discount.text-uppercase Скидка
+          .card__label.card__label_discount.text-uppercase.px-2 Скидка
         else if (card__label === 'sale')
-          .card__label.card__label_sale.text-uppercase Акция
+          .card__label.card__label_sale.text-uppercase.px-2 Акция
         else if (card__label === 'hit')
-          .card__label.card__label_hit.text-uppercase Хит
+          .card__label.card__label_hit.text-uppercase.px-2 Хит
         .card__features.card__features_col
           if (card__warranty)
             .card__features-item
