--- a/src/scss/base/_extends.scss
+++ b/src/scss/base/_extends.scss
@@ -32,7 +32,7 @@
   @include fs-lh(1rem,1.375rem);
   color: #fff;
   height: 40px;
-  border-radius: 8px;
+  border-radius: .5rem;
   transition: all .3s ease;
   background: $color__brand;
   box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, .16);
@@ -60,8 +60,8 @@
 
 %toggler-theme {
   @include inline-block;
-  @include offset(0 16px 8px 0,2px 14px 4px);
-  border-radius: 14px;
+  @include offset(0 1rem .5rem 0,.125rem .875rem .25rem);
+  border-radius: .875rem;
   transition: all .3s ease;
   color: $color__brand;
   background: #fff;
@@ -130,7 +130,7 @@
 }
 
 %bordered {
-  border-radius: 8px;
+  border-radius: .5rem;
   background: #FFFFFF;
   border: 1px solid #ECECEC;
 }
@@ -139,7 +139,7 @@
   @include h6;
   @include inline-block;
   padding: .125rem .375rem;
-  border-radius: 12px;
+  border-radius: .75rem;
   background: $color__light;
 }
 
