--- a/src/scss/tpl/_brand.scss
+++ b/src/scss/tpl/_brand.scss
@@ -1,6 +1,6 @@
 .brand {
   height: 100px;
-  border-radius: 8px;
+  border-radius: .5rem;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, .16);
 
   &.brand_slide {
