--- a/src/scss/tpl/_card.scss
+++ b/src/scss/tpl/_card.scss
@@ -1,6 +1,6 @@
 .card {
   @extend %zi-1;
-  border-radius: 8px;
+  border-radius: .5rem;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .12);
   transition: all .3s ease;
 
@@ -143,7 +143,7 @@
 
     padding: .125rem .375rem;
     margin: 0 0 1rem -.375rem;
-    border-radius: 12px;
+    border-radius: .75rem;
     background: rgba(0,0,0,0);
 
     .card__btn-icon {
@@ -180,7 +180,7 @@
     .card__btn-icon {
       @include fw(24px);
       @include wh(24px);
-      @include offset(0 4px 0 0,2px 4px);
+      @include offset(0 .25rem 0 0,.125rem .25rem);
       border-radius: 50%;
     }
   }
@@ -188,7 +188,7 @@
 
 .card__btn-title {
   opacity: 0;
-  line-height: 20px;
+  line-height: 1.25rem;
   transform: scale(0);
   transition: opacity .3s ease .2s, transform .2s ease;
 }
@@ -202,8 +202,7 @@
   @extend %flex-item;
   justify-content: center;
   height: 22px;
-  padding: 0 8px;
-  border-radius: 12px;
+  border-radius: .75rem;
   font-weight: bold;
   line-height: 1;
   text-align: center;
@@ -234,7 +233,7 @@
     bottom: 0;
 
     width: 26px;
-    padding: 4px 0;
+    padding: .25rem 0;
     overflow: hidden;
 
     flex-direction: column;
@@ -289,14 +288,14 @@
           left: 0;
           right: 0;
           bottom: 0;
-          padding: 8px;
+          padding: .5rem;
           box-shadow: 1px 1px 3px rgba(0, 0, 0, .14);
         }
 
         .card__features-icon {
           @include fw(20px);
           @include wh(20px);
-          @include offset(0 6px 0 0,0);
+          @include offset(0 .375rem 0 0,0);
 
           transition: none;
         }
@@ -314,7 +313,7 @@
         .card__features-text {
           opacity: 1;
           height: 100%;
-          padding: 4px 0 0;
+          padding: .25rem 0 0;
         }
 
         .card__features-readmore {
@@ -332,7 +331,7 @@
     .card__features-icon {
       @include fw(26px);
       @include wh(26px);
-      padding: 4px;
+      padding: .25rem;
       border-radius: 50%;
       background: $color__brand;
       transition: all .3s ease;
@@ -341,7 +340,7 @@
     .card__features-title {
       opacity: 0;
       transform: scale(0);
-      border-radius: 12px;
+      border-radius: .75rem;
       background: rgba(0,0,0,0);
       box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .14);
       transition: opacity .3s ease .2s, transform .2s ease;
@@ -351,7 +350,7 @@
     }
 
     .card__features-content {
-      border-radius: 12px;
+      border-radius: .75rem;
     }
   }
 }
@@ -371,7 +370,7 @@
 }
 
 .card__features-title {
-  line-height: 20px;
+  line-height: 1.25rem;
   transition: all .3s ease;
 }
 
@@ -455,7 +454,7 @@
 }
 
 .card__col {
-  @include px(16px,4px);
+  @include px(1rem,.25rem);
 
   @include media-breakpoint-up(xl) {
     @include fw(100%/9);
@@ -501,7 +500,7 @@
 
 .card-row__left {
   @include fw(100%/10);
-  padding-left: 16px;
+  padding-left: 1rem;
 }
 
 .card-row__right {
@@ -510,6 +509,6 @@
 
 .card-row__param {
   @include h2;
-  line-height: 70px;
+  line-height: 4.375rem;
   font-weight: bold;
 }
