--- a/src/scss/tpl/_dropdown.scss
+++ b/src/scss/tpl/_dropdown.scss
@@ -19,7 +19,7 @@
   display: none;
   overflow: hidden;
   padding: .75rem 1rem;
-  border-radius: 4px;
+  border-radius: .25rem;
   background: #fff;
   box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
 
@@ -42,7 +42,7 @@
   @include wh(100%,25px);
   border: 0;
   padding: .125rem .375rem;
-  border-radius: 8px;
+  border-radius: .5rem;
   background: $color__light;
 }
 
