--- a/src/scss/tpl/_filter.scss
+++ b/src/scss/tpl/_filter.scss
@@ -37,6 +37,7 @@
 .filter-toggler {
   @extend %btn-default;
   @include wh(100%,40px);
+  background: $color__light;
   color: $color__text_default;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, .12) inset;
 }
@@ -90,17 +91,11 @@
 }
 
 .filter__alert {
-  @extend %flex-item;
-  justify-content: space-between;
   z-index: 2;
-  color: #fff;
-  background: $color__brand;
 
   @include media-breakpoint-up(lg) {
     @include pos(auto,0);
     right: 0;
-    flex-direction: column;
-    padding: .25rem 1rem 1rem;
   }
 
   @include media-breakpoint-down(md) {
@@ -108,6 +103,5 @@
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 1rem 1.5rem;
   }
 }
