--- a/src/scss/tpl/_form.scss
+++ b/src/scss/tpl/_form.scss
@@ -1,18 +1,18 @@
 .form {
   &.form_bg {
-    padding: 0 0 32px;
+    padding: 0 0 2rem;
     background: #fff;
-    border-radius: 8px;
+    border-radius: .5rem;
     box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
   }
 
   &.form_filter {
     @include media-breakpoint-down(md) {
-      @include px(16px);
+      @include px(1rem);
       border-radius: 0;
       box-shadow: none;
       margin: 0 0 2rem;
-      border-radius: 0 0 8px 8px;
+      border-radius: 0 0 .5rem .5rem;
       box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
     }
   }
@@ -20,41 +20,41 @@
 
 .form__header {
   @include border(0 0 1px,$color__border);
-  padding: 16px 16px 16px 46px;
+  padding: 1rem 1rem 1rem 3rem;
 
   &.form__header_px {
     @include media-breakpoint-up(sm) {
-      @include px(32px);
+      @include px(2rem);
     }
 
     @include media-breakpoint-only(xs) {
-      @include px(16px);
+      @include px(1rem);
     }
   }
 
   &.form__header_py {
     @include media-breakpoint-up(sm) {
-      @include py(32px);
+      @include py(2rem);
     }
   }
 
   &.form__header_bg {
     border: 0;
-    padding-bottom: 8px;
+    padding-bottom: .5rem;
     margin-bottom: .75rem;
     background: #fff;
-    border-radius: 8px;
+    border-radius: .5rem;
     box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
   }
 }
 
 .form__section {
   @include border(0 0 1px,$color__border);
-  padding: 4px 16px 24px;
+  padding: .25rem 1rem 1.5rem;
 
   &.form__section_px {
     @include media-breakpoint-up(sm) {
-      @include px(32px);
+      @include px(2rem);
     }
   }
 
@@ -135,8 +135,8 @@
         @extend %flex-column;
         @include fw(24px);
         @include wh(24px);
-        @include offset(0 8px 0 0,2px 4px);
-        border-radius: 4px;
+        @include offset(0 .5rem 0 0,.125rem .25rem);
+        border-radius: .25rem;
         align-items: center;
         justify-content: center;
         color: $color__brand;
@@ -172,8 +172,8 @@
 
       &.form__label_lg {
         @include fs-lh(1rem,1.375rem);
-        @include offset(0 8px 8px 0,8px 24px);
-        border-radius: 8px;
+        @include offset(0 .5rem .5rem 0,.5rem 1.5rem);
+        border-radius: .5rem;
       }
     }
 
@@ -282,7 +282,7 @@
 
   &.form__item_icon {
     .form__field {
-      padding-right: 30px;
+      padding-right: 2rem;
     }
   }
 
@@ -291,11 +291,11 @@
       color: $color__disabled;
 
       @include media-breakpoint-up(md) {
-        transform: translateY(-22px);
+        transform: translateY(-1.375rem);
       }
 
       @include media-breakpoint-down(sm) {
-        transform: translateY(-24px);
+        transform: translateY(-1.5rem);
       }
     }
   }
@@ -304,8 +304,8 @@
 .form__field {
   border: 0;
   width: 100%;
-  padding: 4px 8px;
-  border-radius: 4px;
+  padding: .25rem .5rem;
+  border-radius: .25rem;
   background: $color__light;
   color: $color__text_default;
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .16) inset;
@@ -334,11 +334,11 @@
 
   &.form__footer_px {
     @include media-breakpoint-up(sm) {
-      @include px(32px);
+      @include px(2rem);
     }
 
     @include media-breakpoint-only(xs) {
-      @include px(16px);
+      @include px(1rem);
     }
   }
 }
@@ -347,7 +347,7 @@
   @extend %btn-default;
   @include wh(24px);
   @include fw(24px);
-  padding: 2px 4px;
+  padding: .125rem .25rem;
   border-radius: 50%;
   transition: all .3s ease;
   background: #fff;
