--- a/src/scss/tpl/_sales.scss
+++ b/src/scss/tpl/_sales.scss
@@ -2,7 +2,7 @@
   @extend %flex-column;
   overflow: hidden;
   background: #fff;
-  border-radius: 8px;
+  border-radius: .5rem;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, .16);
 
   &:nth-child(5n+1) {
@@ -59,7 +59,7 @@
     .sale-item__header {
       max-height: initial;
       overflow: hidden;
-      border-radius: 8px 8px 0 0;
+      border-radius: .5rem .5rem 0 0;
 
       @include media-breakpoint-down(sm) {
         height: auto;
@@ -68,14 +68,14 @@
 
     .sale-item__body {
       @include media-breakpoint-down(sm) {
-        padding: 0 16px 16px;
+        padding: 0 1rem 1rem;
       }
     }
 
     .sale-item__date {
       @include h5;
       @include pos(-10px,32px);
-      padding: 0 8px;
+      padding: 0 .5rem;
     }
   }
 }
@@ -95,11 +95,11 @@
 
 .sale-item__body {
   @include media-breakpoint-up(lg) {
-    padding: 0 32px 16px;
+    padding: 0 2rem 1rem;
   }
 
   @include media-breakpoint-down(md) {
-    padding: 0 16px 24px;
+    padding: 0 1rem 1.5rem;
   }
 }
 
