--- a/src/scss/tpl/_selecter.scss
+++ b/src/scss/tpl/_selecter.scss
@@ -5,9 +5,9 @@
     z-index: 3;
 
     .fs-dropdown-selected {
-      padding-left: 28px;
+      padding-left: 1.75rem;
       box-shadow: none;
-      border-radius: 4px 4px 0 0;
+      border-radius: .25rem .25rem 0 0;
 
       &:before {
         display: none;
@@ -29,13 +29,13 @@
   @include before;
   @include fs-lh(.75rem,1rem);
   width: 100%;
-  padding: 4px 35px 4px 14px;
+  padding: .25rem 2.188rem .25rem .875rem;
   overflow: hidden;
   text-align: left;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  border-radius: 4px;
+  border-radius: .25rem;
   color: $color__brand;
   background: $color__light;
   transition: all .3s ease;
@@ -47,7 +47,7 @@
     right: 2px;
     bottom: 2px;
     width: 28px;
-    border-radius: 4px;
+    border-radius: .25rem;
     background: #fff;
     box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, .12);
   }
@@ -69,7 +69,7 @@
   display: none;
   overflow: auto;
   max-height: 182px;
-  border-radius: 0 0 4px 4px;
+  border-radius: 0 0 .25rem .25rem;
   box-shadow: 1px 8px 8px 0 rgba(0, 0, 0, .1);
 }
 
@@ -77,7 +77,7 @@
   @include h5;
   @extend %btn-default;
   @include before;
-  padding: 2px 24px 2px 28px;
+  padding: .125rem 1.5rem .125rem 1.75rem;
   width: 100%;
   display: block;
   overflow: hidden;
