--- a/src/scss/tpl/_tabs.scss
+++ b/src/scss/tpl/_tabs.scss
@@ -27,9 +27,7 @@
   @include before;
   align-items: center;
   justify-content: center;
-  padding: 8px;
-  //padding: 8px 8px 28px;
-  border-radius: 8px 8px 0 0;
+  border-radius: .5rem .5rem 0 0;
   color: $color__disabled;
   background: $color__light;
   box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .12);
@@ -103,12 +101,12 @@
 .tabs__content {
   @extend %zi-2;
   @include py(2.5rem,2rem);
-  border-radius: 8px;
+  border-radius: .5rem;
   background: #fff;
   box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .12);
 
   @include media-breakpoint-down(md) {
-    @include px(16px);
+    @include px(1rem);
   }
 }
 
